--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--Content-Security-Policy: script-src 'self' https://apis.google.com -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://www.geoplugin.net">  
     <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http:geoplugin.net">
-    <!--Content-Security-Policy: script-src 'self' https://apis.google.com -->
+    
+  
 
     <title>Covid-19 STATS</title>
     <link rel="stylesheet" href="./resources/css/style.css">
