--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://www.geoplugin.net">  
+      <!--Content-Security-Policy: script-src 'self' https://apis.google.com -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://www.geoplugin.net">  
     <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
     
   
