--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!--Content-Security-Policy: script-src 'self' https://apis.google.com -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://geoplugin.net">  
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://geoplugin.net">  
     <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
     
   
