--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </footer>
     <!--javascript-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
-    <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
+    <script language="JavaScript" src="https://ssl.geoplugin.net/javascript.gp?k=Fqw9ch1k6Han28xP" type="text/javascript"></script>
     <script src="resources/js/countries.js"></script>
     <script src="resources/js/app.js"></script>
 </body>
